--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/less/js"]
-	path = lib/less/js
+[submodule "lib/less/js/less"]
+	path = lib/less/js/less
 	url = https://github.com/cloudhead/less.js.git
