--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/less/js/less"]
 	path = lib/less/js/less
 	url = https://github.com/cloudhead/less.js.git
+[submodule "lib/less/js/node-mime"]
+	path = lib/less/js/node-mime
+	url = git@github.com:broofa/node-mime.git
+[submodule "lib/less/js/image-size"]
+	path = lib/less/js/image-size
+	url = git@github.com:image-size/image-size.git
